k8s/wnisb3-java17/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: wnisb3-java17
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: wnisb3-java17
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: wnisb3-java17
        app.kubernetes.io/component: app
    spec:
      containers:
      - name: app
        image: ghcr.io/alexandreroman/wnisb3-java17:latest
        resources:
          requests:
            cpu: "2000m"
            memory: "1Gi"
          limits:
            memory: "1Gi"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          initialDelaySeconds: 30
          httpGet:
            port: http
            path: /actuator/health/liveness
        readinessProbe:
          initialDelaySeconds: 30
          httpGet:
            port: http
            path: /actuator/health/readiness
