k8s/wnisb3-java17/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: wnisb3-java17
spec:
  selector:
    app.kubernetes.io/part-of: wnisb3-java17
    app.kubernetes.io/component: app
  ports:
  - port: 8080
    targetPort: http
